# decistudio

./: .gitignore  Cargo.toml  README.md
_scripts/: build_master.ps1
client/config/: client.example.yaml
client/core/: Cargo.toml
client/core/src/: lib.rs
client/translations/el/: ui.json
client/translations/en/: ui.json
client/ui/native/: Cargo.toml
client/ui/native/src/: example_api.rs  example_translations.rs  main.rs
client/ui/native/ui/: app-window.slint
client/ui/wasm/: Cargo.toml  build.rs  index.html
client/ui/wasm/pkg/: decistudio_client_ui_wasm.js
client/ui/wasm/src/: lib.rs
server/config/: server.example.yaml
server/shared/: Cargo.toml
server/shared/src/: lib.rs
server/standalone/: Cargo.toml
server/standalone/core/: Cargo.toml
server/standalone/core/src/: lib.rs
server/standalone/src/: main.rs
server/stateless/cli/: Cargo.toml
server/stateless/cli/src/: main.rs
server/stateless/core/: Cargo.toml
server/stateless/core/src/: lib.rs
