[workspace]
resolver = "2"
members = [
    "server/shared",
    "server/standalone/core",
    "server/standalone",
    "server/stateless/core",
    "server/stateless/cli",
    "client/core",
    "client/ui/native",
    "client/ui/wasm",
]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros"] }
fern = "0.6"
log = "0.4"
slint = "1.15.1"
slint-build = "1.15.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wasm-bindgen = "0.2"