[package]
name = "decistudio-client-ui-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
decistudio-client-core = { path = "../../core" }
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slint = { workspace = true }

[build-dependencies]
# This is required so build.rs can find the compiler
slint-build = { workspace = true }
