[package]
name = "decistudio-server-stateless-core"
version = "0.1.0"
edition = "2021"

[dependencies]
decistudio-server-shared = { path = "../../shared" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
